@@ -52,6 +52,8 @@ AC_SUBST(GETTEXT_PACKAGE)
 AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION(0.13.1)
 
+AM_ICONV()
+
 dnl Check for headers (Mac OSX often doesn't have them)
 AC_CHECK_HEADERS([getopt.h wchar.h iconv.h])
 
